# i-AOMA

./: .gitattributes  .pre-commit-config.yaml  =1.9.3  README.md  pyproject.toml
examples/run_example_script/: run.py  run_loading_previous_analysis  run_su_windows.py
examples/run_example_script/test_data/: Geo2_timber.xlsx
src/i_aoma/: IAOMA.py  IAOMAPhase1.py  IAOMAPhase2.py  IAOMAResults.py  __main__.py  helper_ssicov_timeout.py
src/i_aoma/ver_1.0/: user_definitions.py
src/i_aoma/ver_1.0/DATA/: Sensors_loc_tower.xlsx  nodes.txt  nodes_mode_shape_dofs.txt  nodes_mode_shape_dofs_tower.xlsx
src/i_aoma/ver_1.0/kde/: helpers.py  kdepy.py
src/i_aoma/ver_1.0/plotting_fns/: drawing_tools_3d.py  plot_mode_shapes.py
src/i_aoma/ver_1.0/ssicov/: SDres.py  constants.py
src/i_aoma/ver_1_0/: Readme.md  run.py  user_definitions.py
src/i_aoma/ver_1_0/DATA/: Readme.md  Sensors_locations_tower.txt  connectivity_tower.xlsx  nodes_tower.xlsx
src/i_aoma/ver_1_0/convergencecheck/: convcheck.py  helpers.py
src/i_aoma/ver_1_0/datapreprocessing/: helpers.py
src/i_aoma/ver_1_0/qmc/: qmc_sampling.py
src/i_aoma/ver_2_0/: DataHandler.py  IAOMA.py  IAOMAPhase1.py  IAOMAPhase2.py  IAOMASingleSetup.py  QmcSampler.py  gui.py  helper.py  helper_DataHandler.py  run.py  run_example.py
src/i_aoma/ver_2_0_old/: Hank.npy  IAOMA.py  IAOMAPhase1.py  additional_dependency_for_testing.txt  helper.py  run.py
ver_1.0/: .~lock.A.txt#  Readme.md  notebook.ipynb  run.py  user_definitions.py
ver_1.0/DATA/: Readme.md  Sensors_locations_tower.txt  connectivity_wood.txt  nodes.txt  nodes_mode_shape_dofs.txt  nodes_wood.txt
ver_1.0/RESULTS/Phase1/: Frequency_dataset.npy  ReducedPoles.npy  admissiblepar.npy  random_forest_trained_model.pkl  selectedmodes.npy  selectedpoles.npy  selectedpoles_totnum.npy
ver_1.0/RESULTS/Phase2/: Frequency_dataset.npy  ReducedPoles.npy  admissiblepar.npy  damp_mean.npy  damp_std.npy  freq_mean.npy  freq_std.npy  modes_mean.npy  modes_std.npy  modes_trace_covariance.npy  modes_trace_covariance_rel_diff.npy  random_forest_predictions.npy  selectedmodes.npy  selectedpoles.npy  selectedpoles_totnum.npy
ver_1.0/convergencecheck/: convcheck.py  helpers.py
ver_1.0/datapreprocessing/: helpers.py
ver_1.0/kde/: helpers.py  kdepy.py
ver_1.0/plotting_fns/: drawing_tools_3d.py  plot_mode_shapes.py
ver_1.0/qmc/: qmc_sampling.py
ver_1.0/rfcore/: RFcore.py  helpers.py
ver_1.0/ssicov/: SDres.py  helpers.py  ssi.py
ver_1.0/utilities/: utils.py
ver_2.0/: run.py
(+163 files in other folders)
