[project]
name = "i-AOMA"
version = "2.0.0"
description = "intelligent Automatic Operational Modal Analysis"
authors = [
    {name = "Marco Martino Rosso", email = "marco.rosso@polito.it"},
]
dependencies = ["numpy==1.26.4", "pandas==2.2.3", "scipy>=1.13.1", "pyOMA-2 @ git+https://github.com/dagghe/pyOMA2.git", "KDEpy>=1.1.11", "seaborn>=0.13.2", "scikit-learn>=1.5.2"]
requires-python = ">=3.8, <3.13"
readme = "README.md"
license = {text = "GPL"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
